Fixing wrong size when open a popup in the map

--- a/page/src/styles/MapView.css
+++ b/page/src/styles/MapView.css
@@ -22,3 +22,7 @@
   white-space: nowrap;
   overflow: hidden;
 }
+
+.mapView .event-map-entry img {
+  min-width: 140px;
+}
